--- a/app/index.html
+++ b/app/index.html
@@ -21,11 +21,17 @@
 
 <body>
   <div ng-controller="CodeController">
-    <h1>Sample page - {{filename}}</h1>
-    <div monaco-editor code="code" language="language" style="width:800px;height:600px;border:1px solid grey"></div>
+    <h1>Sample page with monaco-editor</h1>
+    <div>
+      Select code file: 
+      <select ng-model="selectedCodeFile" ng-options="codeFile.filename for codeFile in codeFiles"></select>
+    </div>
+
+    <h2>Currently editing - {{selectedCodeFile.filename}}</h2>
+    <div monaco-editor code-file="selectedCodeFile" style="width:800px;height:600px;border:1px solid grey"></div>
 
     <h1>Simple textarea to show binding:</h1>
-    <textarea name="" id="" cols="30" rows="10" ng-model="code"></textarea>
+    <textarea name="" id="" cols="30" rows="10" ng-model="selectedCodeFile.code"></textarea>
 
   </div>
 </body>
